--- a/src/components/songCard/songCard.css
+++ b/src/components/songCard/songCard.css
@@ -1,7 +1,7 @@
 .songCard-body {
     width: 100%;
     height: 62%;
-    background-color: #27354D;
+    background-color: #488f50;
     border-radius: 30px;
     border-bottom-right-radius: 0px;
     flex-direction: column;
