--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,12 +1,10 @@
-.sidebar-container {
+.sidebar-container{
     width: 100px;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-
-
+    justify-content: space-evenly;
 }
 
 
