--- a/src/shared/yourPlaylists.css
+++ b/src/shared/yourPlaylists.css
@@ -1,19 +1,36 @@
+
 .library-body {
-    width: 94%;
-    height: 90%;
+    width: 100%;
+    height: 60%;
     padding: 3%;
     display: flex;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    justify-content: space-between;
+
 }
 
 
 
+.library-body h3{
+display: inline-block;
+margin-right: 10px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    width: 100%;
+
+}
+.library-body h2{
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    width: 100%;
+
+}
+
+
 .playlist-card {
     position: relative;
-    width: 15%;
-    height: 47%;
+    width: 12%;
+    height: 70%;
     border-radius: 20px;
     background-color: rgb(30, 42, 62);
     border: 1px solid rgba(54, 69, 98, 0.18);
@@ -41,38 +58,16 @@
 
 }
 
-.playlist-title {
-   
-    font-weight: 800;
-    font-size: 16px;
-    color: #c4d0e3;
-    margin: 10px 0px 10px;
-    display: -webkit-box;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-line-clamp: 2;
-    line-clamp: 2;
-    -webkit-box-orient: vertical;
-
-}
-
-
-
-.page-header {
-   
-    font-weight: 800;
+.playlist-title{
     width: 100%;
-    font-size: 45px;
+    font-weight: 800;
+    font-size: 14px;
     color: #c4d0e3;
-    margin: 10px 0px 10px;
+ 
+}
 
-}
-.playlist-subtitle {
-    font-weight: 400;
-    font-size: 16px;
-    margin: 0px;
-    color: #c4d0e37c
-}
+
+
 
 .playlist-fade {
     position: absolute;
